@@ -50,6 +50,10 @@ if(DISALLOW_THREAD_EXECUTOR)
     add_definitions(-DDISALLOW_THREAD_EXECUTOR)
 endif()
 
+if(DISALLOW_PROCESS_EXECUTOR)
+    add_definitions(-DDISALLOW_PROCESS_EXECUTOR)
+endif()
+
 if(MSVC AND DISABLE_CRTDBG_MAP_ALLOC)
     add_definitions(-DDISABLE_CRTDBG_MAP_ALLOC)
 endif()
