@@ -92,6 +92,10 @@ option(DISALLOW_THREAD_EXECUTOR "Disallow usage of ThreadExecutor for -j"       
 if(DISALLOW_THREAD_EXECUTOR AND WIN32)
     message(FATAL_ERROR "Cannot disable usage of ThreadExecutor on Windows as no other executor implementation is currently available")
 endif()
+option(DISALLOW_PROCESS_EXECUTOR "Disallow usage of ProcessExecutor for -j"                   OFF)
+if(DISALLOW_THREAD_EXECUTOR AND DISALLOW_PROCESS_EXECUTOR)
+    message(FATAL_ERROR "Cannot disable both ThreadExecutor and ProcessExecutor")
+endif()
 set(USE_BOOST "Auto" CACHE STRING "Usage of Boost")
 set_property(CACHE USE_BOOST PROPERTY STRINGS Auto Off On)
 option(USE_BOOST_INT128     "Usage of Boost.Multiprecision 128-bit integer for Mathlib"     OFF)
