@@ -161,12 +161,16 @@
 #define HAS_THREADING_MODEL_THREAD
 #define STDCALL __stdcall
 #elif ((defined(__GNUC__) || defined(__sun)) && !defined(__MINGW32__)) || defined(__CPPCHECK__)
+#if !defined(DISALLOW_PROCESS_EXECUTOR)
 #define HAS_THREADING_MODEL_FORK
+#endif
 #if !defined(DISALLOW_THREAD_EXECUTOR)
 #define HAS_THREADING_MODEL_THREAD
 #endif
 #define STDCALL
-#else
+#endif
+
+#if !defined(HAS_THREADING_MODEL_FORK) && !defined(HAS_THREADING_MODEL_THREAD)
 #error "No threading model defined"
 #endif
 
